# VibeCodingLight

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: research-optimizer.md  research-researcher.md  research-reviewer.md
.claude/skills/research/: CONFIG.yaml  SKILL.md  WORKFLOW.md
.claude/skills/research/CHECKLISTS/: during_execution.md  post_execution.md  pre_execution.md
.claude/skills/research/PROMPTS/: energy_storage_research_prompt.md  industry_reviewer.md  orchestrator.md  structure_optimizer.md  subagent.md
.claude/skills/research/TEMPLATES/: analysis_report.md  final_report.md
config/: default.json
docs/: FIRMWARE.md  FIX_PLAN.md  PROTOCOL.md
firmware/vibelight/: velight.ino
firmware/vibelight/test_chase/: test_chase.ino
firmware/vibelight/v2serial/: v2serial.ino
firmware/vibelight/v2swapped/: v2swapped.ino
firmware/vibelight/velight/: velight.ino
tests/: test_core.py
vibecodinglight/: __init__.py  __main__.py  cli.py  config.py  daemon.py  hooks.py  hooks_catalog.py  proc.py  protocol.py  transport.py
